Sculpt Mode: Area and Topology auto-masking don't work with Mirror #102348

Closed
opened 2022-11-08 10:51:25 +01:00 by Julien Kaspar · 6 comments
Member

System Information
Operating system: Linux-5.15.0-52-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02

Blender Version
Broken: version: 3.4 Beta / 3.5.0 Alpha, branch: master (modified), commit date: 2022-11-08 09:14, hash: 871375f222

Short description of error
When using Area Normal auto-masking in sculpt mode in combination with Topology auto-masking, the sculpting brushes and tools do not properly work with mirror options anymore.
If these auto-masking options are used in isolation they work fine.

image.png

Exact steps for others to reproduce the error

  • Add a monkey primitive and subdivide a few times (Apply modifier)
  • Enter sculpt mode
  • In the header enable area and topology auto-masking
  • Enable X mirror in the tool settings
  • Sculpt on the object
**System Information** Operating system: Linux-5.15.0-52-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02 **Blender Version** Broken: version: 3.4 Beta / 3.5.0 Alpha, branch: master (modified), commit date: 2022-11-08 09:14, hash: `871375f222` **Short description of error** When using Area Normal auto-masking in sculpt mode in combination with Topology auto-masking, the sculpting brushes and tools do not properly work with mirror options anymore. If these auto-masking options are used in isolation they work fine. ![image.png](https://archive.blender.org/developer/F13867422/image.png) **Exact steps for others to reproduce the error** - Add a monkey primitive and subdivide a few times (Apply modifier) - Enter sculpt mode - In the header enable area and topology auto-masking - Enable X mirror in the tool settings - Sculpt on the object
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Since this is a new feature for 3.4 I will raise the priority.

Since this is a new feature for 3.4 I will raise the priority.

This issue was referenced by b1cc2a48f2

This issue was referenced by b1cc2a48f2a57d4020b562f7d428ca8ed553b451

This issue was referenced by 0ad8f3ff58

This issue was referenced by 0ad8f3ff585c9693bb0cc84108ced00e8e0e1771
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-11-28 22:12:42 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102348
No description provided.